[BACKOUT] JDK-8365256: RelocIterator should use indexes instead of pointers

XMLWordPrintable

    • b14

      When a null pointer is accessed in SA it's serialized into the null Java object, this in turn causes runtime NPE:s when attempts are made to perform arithmetic on them.

      The "real fix" requires a lot of work on the SA side, and we cannot prioritize that. Instead, I'm backing out my changes.

            Assignee:
            Johan Sjölen
            Reporter:
            Johan Sjölen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: