8366341: [BACKOUT] JDK-8365256: RelocIterator should use indexes instead of pointers

Reviewed-by: ayang